# lg2slack

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  slack_manifest.yaml
.github/workflows/: release.yml
examples/plant_bot/: .env.example  README.md  langgraph.json  plant_agent.py  pyproject.toml  slack_manifest.yaml  slack_server.py  streamlit_plant.py
langgraph2slack/: __init__.py  bot.py  config.py  transformers.py  utils.py
langgraph2slack/handlers/: base.py  message.py  stream.py
langgraph2slack/mixins/: __init__.py  reactions.py
langgraph2slack/templates/: basic.py  with_transformers.py
lg2slack/: __init__.py  bot.py  config.py  transformers.py  utils.py
lg2slack/handlers/: __init__.py  base.py  message.py  stream.py
lg2slack/mixins/: reactions.py
lg2slack/templates/: basic.py  with_transformers.py
tests/: __init__.py  conftest.py  test_bot_core.py  test_bot_should_process.py  test_config.py  test_handlers_base.py  test_handlers_message.py  test_handlers_stream.py  test_reactions.py  test_transformers.py  test_utils.py
todo/: README.md  enhancements.md  fixes.md
