[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lg2slack"
version = "0.1.4"
description = "Simple package to connect LangGraph applications to Slack"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Siavash Yasini", email = "siavash.yasini@gmail.com"}
]
keywords = ["langgraph", "slack", "chatbot", "ai", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "fastapi>=0.100.0",
    "langgraph-sdk>=0.1.0",
    "slack-bolt>=1.18.0",
    "aiohttp>=3.8.0",  # Required by slack-bolt for async support
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/syasini/lg2slack"
Documentation = "https://github.com/syasini/lg2slack#readme"
Repository = "https://github.com/syasini/lg2slack"
Issues = "https://github.com/syasini/lg2slack/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lg2slack*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I"]
ignore = []
